--- a/app/assets/stylesheets/includes/elements.scss
+++ b/app/assets/stylesheets/includes/elements.scss
@@ -15,10 +15,10 @@
 	white-space:nowrap;
 }
 
-#grade-table .btn-sm
-{
-	font-size:small;
-}
+//#grade-table .btn-sm
+//{
+//	font-size:small;
+//}
 
 #grade-table td:nth-child(n+2), #grade-table th:nth-child(n+2)
 {
@@ -104,8 +104,8 @@ span.bubble {
 .grade-button
 {
 	line-height: 1.1;
-	font-size: small;
-	padding: 0.2rem;
+	font-size: 11px;
+	padding: 0.25rem;
 	border: none;
 }
 
