--- a/app/views/overviews/_table.html.erb
+++ b/app/views/overviews/_table.html.erb
@@ -1,6 +1,6 @@
 <table id="grade-table" class="table table-sm table-striped table-responsive">
 	<tr>
-		<th>Name</th>
+		<th></th>
 
 		<% if params[:status] != 'registered' %>
 		<th>Participation</th>
@@ -15,7 +15,7 @@
 
 	<% users.each do |group, user_list|%>
 		<tr>
-			<td colspan="<%= (params[:status] != 'registered') ? '2' : '1' %>">
+			<th colspan="<%= (params[:status] != 'registered') ? '2' : '1' %>">
 				<% if group %>
 					<%= group.name %> &ndash;
 					<%= group.grader_names %>
@@ -23,7 +23,7 @@
 					Groupless
 				<% end %>
 				(<%= user_list.size %>)
-			</td>
+			</th>
 			<% @psets.each do |pset| %>
 			<th>
 				<%= link_to_if current_user.admin?, pset.name[0..2], reopen_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id, group_id: group.id), method: :post, data: { confirm: "Re-open all grades for this assignment for this group?" }, title: pset.name, class: 'text-light' %>
