--- a/app/views/submits/_title.html.erb
+++ b/app/views/submits/_title.html.erb
@@ -2,7 +2,7 @@
 	<h1><%= link_to_if current_user.senior?, @submit.user_name, @submit.user %> / <%= @submit.pset_name %></h1>
 
 	<%= render partial: 'submits/info' %>
-	<ul class="nav nav-tabs mt-3 mb-n3 border-bottom-0" id="submit_tab" role="tablist">
+	<ul class="nav nav-tabs mt-3 mb-n3 border-bottom-0 flex-nowrap overflow-scroll" id="submit_tab" role="tablist">
 		<li class="nav-item">
 			<a class="nav-link active" id="submit-grading-tab" data-toggle="tab" href="#submit-grading" role="tab" aria-controls="home" aria-selected="true">Grading</a>
 		</li>
