--- a/app/assets/stylesheets/includes/modal.scss
+++ b/app/assets/stylesheets/includes/modal.scss
@@ -8,17 +8,46 @@
 {
 	@extend .modal-header;
 	@extend .align-items-start;
+
+	border: 0;
 	border-radius: 0.5rem 0.5rem 0 0;
+	background: linear-gradient(60.98deg, rgba(105, 219, 181, 0.37) 0%, rgba(48, 199, 223, 0.66) 100%);
+	padding: 1.2rem;
+
+	.nav-tabs
+	{
+		border-bottom: 0;
+		overflow-x: scroll;
+		flex-wrap: nowrap;
+		margin-bottom: -1.2rem;
+
+		.nav-link
+		{
+			border: 0;
+			margin-bottom: 0;
+			white-space: nowrap;
+		}
+	}
+
+	.btn-close
+	{
+		margin: 0;
+		padding: 0;
+	}
 }
 
 #modal-browser-body
 {
 	@extend .modal-body;
+	
+	padding: 1.7rem 1.2rem !important;
 }
 
 #modal-browser-footer
 {
 	@extend .modal-footer;
+
+	padding: 1rem !important;
 }
 
 #modal-browser
@@ -33,10 +62,4 @@
 	{
 		padding:1.5rem;
 	}
-}
-
-#modal-browser-header .btn-close
-{
-	margin: 0;
-	padding: 0;
 }
