--- a/app/views/users/_title.html.erb
+++ b/app/views/users/_title.html.erb
@@ -5,18 +5,28 @@
 	<img src="<%= @student.avatar %>" style="max-width:70px; margin-right:1em;" class="pull-left">
 	<% end %>
 
-	<h1 class="mb-1">
+	<h1>
 		<%= @student.name %>
 		<small class="ml-3"><%= @student.login_id %> - <%= @student.mail %></small>
 		<%= link_to bootstrap_icon('pencil', width: 16), edit_user_path(@student), class: 'px-2' %>
 	</h1>
+
 	<% if @student.status.present? %>
-	<p class="m-0"><%= @student.status %></p>
+	<p class="mt-2 mb-0"><%= @student.status %></p>
 	<% end %>
 	<% end %>
+	<div class="small py-2">
+		<%
+		subs = @student.submits.includes(:grade).group_by(&:pset_id)
+		%>
 
+		<% @psets.each do |pset| %>
+		<%= grade_button(@student, pset, subs)%>
+		<% end %>
+	</div>
+	
 
-	<ul class="nav nav-tabs mt-3 mb-n3 border-bottom-0" id="submit_tab" role="tablist">
+	<ul class="nav nav-tabs mt-3" id="submit_tab" role="tablist">
 		<li class="nav-item">
 			<a class="nav-link active" id="submit-notes-tab" data-toggle="tab" href="#submit-notes" role="tab" aria-controls="home" aria-selected="true">Timeline</a>
 		</li>
