--- a/app/views/users/_title.html.erb
+++ b/app/views/users/_title.html.erb
@@ -24,19 +24,20 @@
 		<%= grade_button(@student, pset, subs)%>
 		<% end %>
 	</div>
-	
 
-	<ul class="nav nav-tabs mt-3" id="submit_tab" role="tablist">
-		<li class="nav-item">
-			<a class="nav-link active" id="submit-notes-tab" data-toggle="tab" href="#submit-notes" role="tab" aria-controls="home" aria-selected="true">Timeline</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" id="submit-attendance-tab" data-toggle="tab" href="#submit-attendance" role="tab" aria-controls="home" aria-selected="true">Attendance</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" id="submit-hands-tab" data-toggle="tab" href="#submit-hands" role="tab" aria-controls="home" aria-selected="true">Hands</a>
-		</li>
+	<div class="nav-tabs-container d-flex mt-3 align-items-center">
+		<ul class="nav nav-tabs" id="submit_tab" role="tablist">
+			<li class="nav-item">
+				<a class="nav-link active" id="submit-notes-tab" data-toggle="tab" href="#submit-notes" role="tab" aria-controls="home" aria-selected="true">Timeline</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" id="submit-attendance-tab" data-toggle="tab" href="#submit-attendance" role="tab" aria-controls="home" aria-selected="true">Attendance</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" id="submit-hands-tab" data-toggle="tab" href="#submit-hands" role="tab" aria-controls="home" aria-selected="true">Hands</a>
+			</li>
+		</ul>
 		<%= render 'toolbar' %>
-	</ul>
+	</div>
 
 </div>
