--- a/app/assets/stylesheets/includes/modal.scss
+++ b/app/assets/stylesheets/includes/modal.scss
@@ -57,13 +57,13 @@
 {
 	@extend .modal-footer;
 
-	background: linear-gradient(60.98deg, rgba(105, 219, 181, 0.37) 0%, rgba(48, 199, 223, 0.66) 100%);
-	border: 0;
+//	background: linear-gradient(60.98deg, rgba(105, 219, 181, 0.37) 0%, rgba(48, 199, 223, 0.66) 100%);
+//	border: 0;
 	padding: 0.5rem !important;
 	
 	textarea
 	{
-		border: 0;
+//		border: 0;
 	}
 }
 
