--- a/app/assets/stylesheets/includes/framework.scss
+++ b/app/assets/stylesheets/includes/framework.scss
@@ -5,6 +5,7 @@ body
 	-webkit-font-smoothing: subpixel-antialiased;
 	background-size:cover;
 	background-attachment: fixed;
+	overscroll-behavior: none;
 }
 
 //****************************************************************************
