--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -4,7 +4,6 @@
 <%= menu_group current_schedule.name do %>
 	<%= menu_link 'Overview', overview_path, icon: 'columns' %>
 	<%= menu_link 'Grading', grading_index_path, icon: 'pen' %>
-	<%= menu_link 'Hands', hands_path, icon: 'people-fill', condition: Settings.hands_allow %>
 	<%= menu_link 'Announcements...', alerts_path, icon: 'bell-fill', target: 'modal' %>
 	<%= menu_link 'Tests...', tests_path, icon: 'check', target: 'modal', condition: Settings.tests_present %>
 	<%= menu_link 'Set module...', edit_schedule_current_module_path(current_schedule), icon: 'calendar', target: 'modal', condition: current_schedule.can_admin_set_module? %>
@@ -19,11 +18,15 @@
 <% end%>
 <% end %>
 
+<%= menu_group 'Hands' do %>
+	<%= menu_link 'Hands', hands_path, icon: 'people-fill', condition: Settings.hands_allow %>
+	<%= menu_link 'Hands statistics...', hands_statistics_path, icon: 'hand', target: 'modal' %>
+<% end %>
+
 <%= menu_group 'Course' do %>
 	<%= menu_link 'Course administration...', admin_course_path, icon: 'inboxes', target: 'modal' %>
 	<%= menu_link 'Site configuration...', admin_site_path, icon: 'wrench', target: 'modal' %>
 	<%= menu_link 'Edit permissions...', admin_users_path, icon: 'unlock', target: 'modal' %>
-	<%= menu_link 'Hands statistics...', hands_statistics_path, icon: 'hand', target: 'modal' %>
 	<%= menu_link 'Update courseware', admin_update_path, icon: 'download', method: :post, data: { turbo: "false" } %>
 <% end %>
 
