--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -6,7 +6,7 @@
 	width: 100%;
 	display:flex;
 	flex-wrap:nowrap;
-	background: linear-gradient(50deg, #FEF3BE 0%, #FDDED0 100%);
+	background: linear-gradient(50deg, #FEF3BE 0%, #FFDEDE 100%);
 }
 
 #sidebar
