--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -52,7 +52,7 @@ summary
 	a:hover
 	{
 		color:#235A9E;
-		background: linear-gradient(50deg, #FCDFBD 0%, #FCDCC1 100%);
+		background: linear-gradient(50deg, rgba(193, 206, 211, 0.2) 0%, rgba(193, 206, 211, 0.5) 100%);
 		text-decoration:none;
 	}
 }
