CSS fixes all over the place

--- a/app/assets/stylesheets/includes/elements.scss
+++ b/app/assets/stylesheets/includes/elements.scss
@@ -92,7 +92,6 @@ span.bubble {
 #files
 {
 	padding-top:0.35rem;
-	background-color:#F4F4F4;
 }
 
 #files .nav-item .nav-link
@@ -132,4 +131,9 @@ span.bubble {
 {
 	color: var(--bs-dark) !important;
 	background-color: #95d5b2 !important;
+}
+
+#submit-content
+{
+	background-color: #F1EDE7;
 }
