--- a/app/assets/stylesheets/includes/framework.scss
+++ b/app/assets/stylesheets/includes/framework.scss
@@ -19,6 +19,10 @@ body
 	border-right:none;
 }
 
+#submitted_pset
+{
+	border-radius:0;
+}
 
 //****************************************************************************
 
