--- a/app/assets/stylesheets/includes/print.scss
+++ b/app/assets/stylesheets/includes/print.scss
@@ -59,7 +59,7 @@
     
 	#content, #content p
 	{
-		font-size:12pt ! important;
+		font-size:10pt ! important;
 	}
 	
 	#content h1
@@ -97,6 +97,11 @@
 		-webkit-box-sizing: border-box;
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
+	}
+	
+	section pre
+	{
+		border: 1pt solid gray;
 	}
 
 	@page
