--- a/app/views/application/_float_nav.html.erb
+++ b/app/views/application/_float_nav.html.erb
@@ -43,7 +43,7 @@
 	<% end %>
 
 	<% if !authenticated? %>
-	<li class="nav-item"><%= link_to("Sign in".html_safe, session_login_path, class:"d-inline-block px-2", style:"background-color:#DBE6EC", data: { turbo: false })%></li>
+	<li class="nav-item"><%= link_to("Sign in".html_safe, session_login_path, class:"nav-link", data: { turbo: false })%></li>
 	<% else %>
 	<%= render 'menu' %>
 	<% end %>
