--- a/app/views/home/_alert.html.erb
+++ b/app/views/home/_alert.html.erb
@@ -1,4 +1,4 @@
-<div class="timeline-item">
+<div class="card">
 	<div class="card-body">
 		<small><%= date_span_with_title(alert.created_at)%></small>
 		<h5 class="card-title"><%= alert.title %></h5>
