--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,5 +1,5 @@
-<div class="timeline-item">
-	<div class="card-body bg-light rounded-3 py-2 px-3 d-inline-block">
+<div class="card">
+	<div class="card-body py-3 px-4">
 		<%= render partial: "items/#{item.class.to_s.downcase}", object: item %>
 	</div>
 </div>
