--- a/app/views/layouts/sidebar.html.erb
+++ b/app/views/layouts/sidebar.html.erb
@@ -2,7 +2,7 @@
 <div class="container-fluid">
 	<div class="row <%= 'room-for-toc' if Settings.room_for_toc %>">
 		
-		<div id="sidebar" class="d-md-flex align-items-stretch flex-column flex-shrink-0 align-items-stretch shadow-sm">
+		<div id="sidebar" class="d-md-flex align-items-stretch flex-column flex-shrink-0 align-items-stretch">
 			<%= render 'sidebar' %>
 		</div>
 		
@@ -10,13 +10,6 @@
 
 			<%= render "alerts" %>
 			
-			<% if @submitted_at %>
-			<div id="submitted_pset" class="alert alert-success">
-				<%= t :you_submitted_ago, time: time_ago_in_words(@submitted_at) %>
-				<%= link_to t(:see_submissions_page), submissions_path %>
-			</div>
-			<% end %>
-
 			<div id="float-nav" class="clearfix d-none d-md-block navbar-expand sticky-top p-3">
 				<div class="float-md-right">
 					<%= yield :navbar_items %>
@@ -24,7 +17,7 @@
 				</div>
 			</div>
 
-			<div id="content" class="pt-4 px-3 pb-3 px-sm-4 pb-sm-4 px-lg-5 pb-lg-5 mx-auto">
+			<div id="content" class="pt-4 px-4 pb-3 px-sm-4 pb-sm-4 px-lg-5 pb-lg-5 mx-auto">
 				<%= content_for?(:content) ? yield(:content) : yield %>
 			</div>
 		</div>
