CSS fixes all over the place

--- a/app/views/layouts/sidebar.html.erb
+++ b/app/views/layouts/sidebar.html.erb
@@ -10,7 +10,7 @@
 
 			<%= render "alerts" %>
 			
-			<div id="float-nav" class="clearfix d-none d-md-block navbar-expand sticky-top p-3">
+			<div id="float-nav" class="clearfix d-none d-md-block navbar-expand sticky-top px-3" style="padding-top: 1.2rem;">
 				<div class="float-md-right">
 					<%= yield :navbar_items %>
 					<%= render 'float_nav' %>
