--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,7 @@ $link-decoration: none;
 
 @import "includes/framework";
 @import "includes/navigation";
+@import "includes/courselinks";
 @import "includes/content";
 @import "includes/elements";
 @import "includes/timeline";
