--- a/app/views/application/_course_links.html.erb
+++ b/app/views/application/_course_links.html.erb
@@ -1,14 +1,14 @@
-<div id="course-links" class="flex-shrink-0 d-flex">
+<div id="course-links">
 	<% if logged_in? && alerts_for_current_schedule.any? %>
-		<div style="flex:1 0 0; min-width:0"><a href="/announcements" class="d-block w-100 text-center text-truncate p-1 rounded"><%= bootstrap_icon 'bell-fill' %><br><small><%= t(:announcements) %></small></a></div>
+		<a href="/announcements"><%= bootstrap_icon 'bell-fill' %><small><%= t(:announcements) %></small></a>
 	<% end %>
 	<% if logged_in? && current_user.submits.where("submitted_at is not null").any? %>
-		<div style="flex:1 0 0; min-width:0"><a href="/submissions" class="d-block w-100 text-center text-truncate p-1 rounded"><%= bootstrap_icon 'kanban' %><br><small><%= t(:submissions) %></small></a></div>
+		<a href="/submissions"><%= bootstrap_icon 'kanban' %><small><%= t(:submissions) %></small></a>
 	<% end %>
 	<% if current_schedule && current_schedule.page %>
-		<div style="flex:1 0 0; min-width:0"><a href="/syllabus" class="d-block w-100 text-center text-truncate p-1 rounded"><%= bootstrap_icon 'calendar' %><br><small><%= t(:syllabus) %></small></a></div>
+		<a href="/syllabus"><%= bootstrap_icon 'calendar' %><small><%= t(:syllabus) %></small></a>
 	<% end %>
 	<% Course.links.each do |title, url|  %>
-		<div style="flex:1 0 0; min-width:0"><%= link_to insert_icon(title).html_safe, url, class:"d-block w-100 w-100 text-center text-truncate p-1 rounded", target: url =~ /^http/i ? '_blank' : nil %></div>
+		<%= link_to insert_icon(title).html_safe, url, class:"", target: url =~ /^http/i ? '_blank' : nil %>
 	<% end if logged_in? %>
 </div>
