--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -9,9 +9,10 @@
 <% end %>
 
 <% if @page.pset %>
-<section id="submit-content" class="py-4 my-4">
+<section id="submit-content" class="py-4 my-4 mt-5">
+
 	<% if @submitted_at %>
-	<div id="submitted_pset" class="alert alert-success">
+	<div id="submitted_pset" class="alert alert-success mt-n4 mx-n4 mb-4 px-4 border-0">
 		<%= t :you_submitted_ago, time: time_ago_in_words(@submitted_at) %>
 		<%= link_to t(:see_submissions_page), submissions_path %>
 	</div>
@@ -22,8 +23,8 @@
 		You can't submit because you are not logged in.
 	</div>
 	<% elsif !@allow_submit %>
-	<div class="alert alert-danger" role="alert">
-		You can't submit this problem, because a previous submission is currently being graded or has already been graded.
+	<div class="text-danger border-0" role="alert">
+		You can't currently submit this problem, because a previous submission is currently being graded or has already been graded.
 	</div>
 	<% elsif @page.pset %>
 	<%= render 'submit_tab' %>
