--- a/app/views/page/_submit_tab.html.erb
+++ b/app/views/page/_submit_tab.html.erb
@@ -1,26 +1,24 @@
+<h3 class="mt-0">Submit</h3>
+
 <% if @page.pset.message %>
 <p><strong><%= @page.pset.message %></strong></p>
 <% end %>
 
 <% if @page.pset.form || @page.pset.files %>
-<table class="table p-0 m-0 border-0">
+<table class="table table-sm table-borderless p-0 m-0">
 
 	<% if @page.pset.form %>
-	<tr>
-		<td>form.txt</td>
-		<td>Automatically generated from your answers.</td>
-		<td></td>
-	</tr>
+		Your answers to the questions above will be submitted.
 	<% end %>
 
 	<% @page.pset.files.each do |header, files| %>
 	<tr>
-		<th colspan="2" class="fs-5"><%= header.humanize %></th>
+		<th colspan="2"><%= header.humanize %></th>
 	</tr>
 	<% files.each do |file| %>
 	<tr>
 		<td class="align-middle"><%= file %></td>
-		<td><%= file_field_tag "f[#{file}]", :accept => File.extname(file), required: header == 'required', class: 'form-control form-control-sm' %></td>
+		<td><%= file_field_tag "f[#{file}]", :accept => File.extname(file), required: header == 'required', class: 'form-control' %></td>
 	</tr>
 	<% end   if files %>
 	<% end %>
