--- a/app/views/page/_submit_tab.html.erb
+++ b/app/views/page/_submit_tab.html.erb
@@ -5,25 +5,25 @@
 <% end %>
 
 <% if @page.pset.form || @page.pset.files %>
-<table class="table table-sm table-borderless p-0 m-0">
 
 	<% if @page.pset.form %>
+	<div class="mb-3">
 		Your answers to the questions above will be submitted.
+	</div>
 	<% end %>
 
 	<% @page.pset.files.each do |header, files| %>
-	<tr>
-		<th colspan="2"><%= header.humanize %></th>
-	</tr>
+	<div class="mb-3 fw-bold"><%= header.humanize %></div>
 	<% files.each do |file| %>
-	<tr>
-		<td class="align-middle"><%= file %></td>
-		<td><%= file_field_tag "f[#{file}]", :accept => File.extname(file), required: header == 'required', class: 'form-control' %></td>
-	</tr>
+	<div class="row mb-3">
+		<label for="<%= "file-#{file.parameterize}" %>" class="col-sm-3 col-form-label col-form-label-sm"><%= file %></label>
+		<div class="col-sm-9">
+			<%= file_field_tag "f[#{file}]", :accept => File.extname(file), required: header == 'required', class: 'form-control form-control-sm', id: "file-#{file.parameterize}" %>
+		</div>
+	</div>
 	<% end   if files %>
 	<% end %>
 
-</table>
 <% end %>
 
 <% if @page.pset.url %>
