--- a/app/assets/stylesheets/includes/content.scss
+++ b/app/assets/stylesheets/includes/content.scss
@@ -220,45 +220,8 @@ section, .sectionbody .content
 
 	table
 	{
-		max-width: 100%;
-		border-top: 1px solid gray;
-		border-bottom: 1px solid gray;
-		margin: 1.5rem auto;
-		padding: 0.5rem 0;
-		overflow-x: scroll;
-	}
-	
-	table tr th
-	{
-		min-height:2rem;
-	}
-
-	table th
-	{
-		text-align: left;
-		padding-top: 0.2rem;
-		padding-bottom: 0.2rem;
-	}
-
-	table input[type=text]
-	{
-		margin-bottom: 0;
-	}
-
-	table td, table th
-	{
-		padding-left: 0 !important;
-		padding-top: 0 !important;
-	}
-	
-	table td:not(:last-child), table th:not(:last-child)
-	{
-		padding: 0.2rem 0.5rem 0 0;
-	}
-
-	table td:last-child, table th:last-child
-	{
-		padding-right: 0 !important;
+		@extend .table;
+		width:auto;
 	}
 
 	/*
