--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -17,7 +17,7 @@
 				</div>
 			</div>
 
-			<div id="content" class="pt-4 px-4 pb-3 px-sm-4 pb-sm-4 px-lg-5 pb-lg-5 mx-auto">
+			<div id="content" class="px-3 py-3 px-sm-4 py-sm-4 px-lg-5 py-lg-5 mx-auto">
 				<%= content_for?(:content) ? yield(:content) : yield %>
 			</div>
 		</div>
