--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -12,9 +12,10 @@
 <% else %>
 
 <div id="timeline" class="row flex-xl-row-reverse">
-	<div class="col px-3">
+	<div class="col">
 		<%= render partial: "items/item", collection: @items %>
 	</div>
 </div>
 
 <% end %>
+
