--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -145,7 +145,7 @@ summary
 		display: inline-block;
 		background-color: white;
 		border-radius: 0.3rem;
-		box-shadow: 0px 4px 6px -1px rgba(0,0,0,0.1) , 0px 2px 4px -1px rgba(0,0,0,0.06);
+		box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.02) ;
 		margin-bottom: 2rem;
 	}
 }
