--- a/app/assets/stylesheets/includes/timeline.scss
+++ b/app/assets/stylesheets/includes/timeline.scss
@@ -60,21 +60,16 @@
 
 #timeline .card small
 {
+	display: block;
 	color:#49A1F6;
 	text-transform: uppercase;
 	font-size:x-small;
+	margin-bottom:0.25rem;
 }
 
 #timeline .card small.author
 {
 	color:#8b9894;
-}
-
-// ensure that if we use columns in the timeline, and those collapse,
-// that there is still space between the card boxes
-#timeline div:not(:last-child) .card:last-child
-{
-	margin-bottom:30px;
 }
 
 // only horizontal th elements get centered, as well as td elements
