--- a/app/views/layouts/sidebar.html.erb
+++ b/app/views/layouts/sidebar.html.erb
@@ -17,7 +17,7 @@
 				</div>
 			</div>
 
-			<div id="content" class="pt-4 px-4 pb-3 px-sm-4 pb-sm-4 px-lg-5 pb-lg-5 mx-auto">
+			<div id="content" class="pt-4 px-4 pb-3 px-sm-4 pb-sm-4 px-md-5 pb-md-5 mx-auto">
 				<%= content_for?(:content) ? yield(:content) : yield %>
 			</div>
 		</div>
