--- a/app/views/home/_alert.html.erb
+++ b/app/views/home/_alert.html.erb
@@ -1,7 +1,7 @@
 <div class="card">
-	<div class="card-body">
+	<div class="card-body p-lg-5">
 		<small><%= date_span_with_title(alert.created_at)%></small>
-		<h5 class="card-title"><%= alert.title %></h5>
+		<h4 class="card-title"><%= alert.title %></h4>
 		<%= simple_markdown(alert.body) %>
 	</div>
 </div>
