--- a/app/assets/stylesheets/includes/courselinks.scss
+++ b/app/assets/stylesheets/includes/courselinks.scss
@@ -16,16 +16,18 @@
 	flex: 1 0 0;
 	min-width: 0;
 	flex-direction: column;
-	align-items: center;
 	overflow: hidden;
 
 	svg
 	{
+		margin-left: auto;
+		margin-right: auto;
 		flex-shrink: 0;
 	}
 
 	small
 	{
+		text-align: center;
 		min-width: 0;
 		overflow: hidden;
 		text-overflow: ellipsis;
