--- a/app/assets/stylesheets/includes/courselinks.scss
+++ b/app/assets/stylesheets/includes/courselinks.scss
@@ -1,7 +1,7 @@
 #course-links
 {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(5rem, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));
 
 	margin-left: 0;
 	margin-right: 0;
