--- a/app/views/alerts/_back.html.erb
+++ b/app/views/alerts/_back.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'Back to list', alerts_path, class: 'btn btn-light' %>
+<%= link_to 'Back to list', alerts_path, class: 'btn btn-outline-primary' %>
