--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -3,3 +3,8 @@
 <% end %>
 
 <%= render 'form' %>
+
+<% content_for :footer do %>
+	<%= render partial: 'alerts/back' %>
+	<%= submit_tag 'Save announcement', form: 'alert_form', class: 'ml-auto btn btn-primary float-right' %>
+<% end %>
