--- a/app/assets/stylesheets/includes/elements.scss
+++ b/app/assets/stylesheets/includes/elements.scss
@@ -115,6 +115,12 @@ span.bubble {
 	height:100%;
 }
 
+.grade-button.btn-light, #grade-table td.bg-light
+{
+	color: var(--bs-light) !important;
+	background-color: transparent !important;
+}
+
 .grade-button.btn-success, #grade-table td.bg-success
 {
 	color: var(--bs-light) !important;
