--- a/app/views/admin/course/_new_user.html.erb
+++ b/app/views/admin/course/_new_user.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'Add user', new_admin_user_path, class: 'btn btn-primary' %>
+<%= link_to 'Add user', new_admin_user_path, class: 'btn btn-outline-primary' %>
