--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @alert) do |f| %>
+<%= form_with(model: @alert, id: 'alert_form') do |f| %>
 
 <% if @alert.errors.any? %>
 <div id="error_explanation">
@@ -37,10 +37,5 @@
 	content_tag(:div, class: 'form-check pl-1 pb-1') { b.label { b.radio_button + " " + b.text } }
 end %>
 
-
-<div class="mt-3 actions clearfix">
-	<%= render partial: 'alerts/back' %>
-	<%= f.submit class: 'btn btn-primary float-right' %>
-</div>
 
 <% end %>
