--- a/app/views/application/_modal_card.html.erb
+++ b/app/views/application/_modal_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card mb-3">
+<div class="card">
 	<div class="card-body">
 		<h5 class="card-title"><%= title %></h5>
 		<% if subtitle %>
