--- a/app/views/application/_search.html.erb
+++ b/app/views/application/_search.html.erb
@@ -1,6 +1,6 @@
 <div id="search" class="dropdown autocomplete">
 	<form id="student-search-form" action="<%= search_users_path %>" method="get" data-remote="true">
-		<input id="student-search" name="text" type="text" autocomplete="off" class="form-control form-control-sm" placeholder="Find student" aria-label="Find student">
+		<input id="student-search" name="text" type="text" autocomplete="off" class="form-control form-control-sm border-secondary" placeholder="Find student" aria-label="Find student">
 	</form>
 	<div id="search-results" class="dropdown-menu dropdown-menu-right autocomplete-results" role="menu"></div>
 </div>
