--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,35 +2,43 @@
 <%= render 'title' %>
 <% end %>
 
-
-	<div class="small mx-n3 mb-3 bg-light p-1" style="margin-top:-1.7rem">
-		<%
-		subs = @student.submits.includes(:grade).group_by(&:pset_id)
-		%>
-
-		<% @psets.each do |pset| %>
-		<%= grade_button(@student, pset, subs)%>
-		<% end %>
-	</div>
-    
 <div class="tab-content" id="submit_tab_content">
+
 	<div class="tab-pane show active" id="submit-notes" role="tabpanel" aria-labelledby="submit-notes-tab">
 		<div id="timeline">
+
+			<div class="card">
+				<div class="card-body">
+					<div class="small mb-3 p-1">
+						<%
+						subs = @student.submits.includes(:grade).group_by(&:pset_id)
+						%>
+						<% @psets.each do |pset| %>
+						<%= grade_button(@student, pset, subs, true, true)%>
+						<% end %>
+					</div>
+				</div>
+			</div>
+			
 			<%= render partial: "items/item", collection: @items %>
 		</div>
 	</div>
+
 	<div class="tab-pane show" id="submit-attendance" role="tabpanel" aria-labelledby="submit-attendance-tab">
-		<div id="chart-1" style="height: 150px;"></div>
-		<script>
-			new Chartkick.ColumnChart('chart-1', <%= JSON(@student.attendance_records.group_by_day(:cutoff, format: "%a %d-%m").count).html_safe %>)
-		</script>
+		<div class="barchart d-flex align-items-end" style="height:8rem;">
+			<% @attend.each do |dat, count| %>
+			<div class="progress-bar bg-success" style="width:1rem; height: <%= count/12.0*100 %>%"><%= count %></div>
+			<% end %>
+		</div>
 	</div>
+
 	<div class="tab-pane show" id="submit-hands" role="tabpanel" aria-labelledby="submit-hands-tab">
 		<%= render partial: 'hands_overview', object: @student.hands_overview %>
 		<div id="timeline">
 			<%= render partial: "items/item", collection: @student.hands %>
 		</div>
 	</div>
+
 </div>
 
 <% content_for :footer do %>
